--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,17 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <!-- Axios -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <!--CSS-->
+  <link rel="stylesheet" href="/css/main.css">
   <title>Todo SPA</title>
 </head>
 <body>
-  <h1>Todo SPA</h1>
+  <h1>Todo List</h1>
   <ul id='list'></ul>
-  <div id='form'>
+  <form id='form'>
     <input type='text' id='body' placeholder='What do you want Todo?'>
     <button>Add Todo</button>
-  </div>
+  </form>
   <script>
     
     // The front-end
